--- a/register_page.html
+++ b/register_page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Software Project</title>
+    <title>registration-page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel = "stylesheet" href = "assets/CSS/style.css">
   </head>
@@ -141,64 +141,33 @@
 <div class = "container">
     <div class = "row justify-content-center align-items-center inner-row">
         <div class = "col-md-5">
-            <div class = "loginBox p-md-5 p-3">
-                <div class ="form-title">
-                    <h3>Log-in</h3>
-                </div>
-
-                <form method ="post" action="login.php">
-                    <div class = "form-floating mb-3">
-                        <input type ="text" class="form-control form-control-sm" id="floatingInput" name="username">
-                        <label for="floatingInput">Username</label>
-                    </div>
-                    <div class = "form-floating mb-3">
-                        <input type ="password" class="form-control form-control-sm" id="floatingPassword" name="password">
-                        <label for="floatingPassword">Password</label>
-                    </div>
-                    <div class="mt-3">
-                        <input type="submit" name="submit" value = "login"/>
-                        <button class = "btn primaryBg text-white">Login</button>
-                    </div>
-                </form>
-                <div class="error"><?php//echo $error;?><?php//echo $username; echo $password;?></div>
-                 
-                <div class="mt-3">
-                    <span>Don't have an account? </span> <button class="p-0 border-0 bg-transparent primaryColor signup-show">Sign-up</button>
-                </div>
+            <div class ="form-title">
+                <h3>Sign-up</h3>
             </div>
-<!--Create Account-->
-            <div class = "form-box registration-form p-md-5 p-3">
-                <div class ="form-title">
-                    <h3>Create Account</h3>
+            <form method ="post" action="create_account.php">
+                <div class = "form-floating mb-3">
+                    <input type ="text" class="form-control form-control-sm" id="floatingInput" name="register_username">
+                    <label for="floatingInput">Username</label>
                 </div>
-                <form method = "post" action="create_account.php">
-                    <div class = "form-floating mb-3">
-                        <input type ="text" class="form-control form-control-sm" id="floatingInput" name = "register_username">
-                        <label for="floatingInput">Username</label>
-                    </div>
-                    <div class = "form-floating mb-3">
-                        <input type ="email" class="form-control form-control-sm" id="floatingInput" name = "register_email">
-                        <label for="floatingInput">Email</label>
-                    </div>
-                    <div class = "form-floating mb-3">
-                        <input type ="password" class="form-control form-control-sm" id="floatingPassword" name = "register_password">
-                        <label for="floatingPassword">Password</label>
-                    </div>
-                    <div class="mt-3">
-                        <input type="submit" text="submit" value = "submit"/>
-                        <button class = "btn primaryBg text-white">submit</button>
-                    </div>
-                </form>
+                <div class = "form-floating mb-3">
+                    <input type ="password" class="form-control form-control-sm" id="floatingEmail" name="register_email">
+                    <label for="floatingEmail">Email</label>
+                </div>
+                <div class = "form-floating mb-3">
+                    <input type ="password" class="form-control form-control-sm" id="floatingPassword" name="register_password">
+                    <label for="floatingPassword">Password</label>
+                </div>
                 <div class="mt-3">
-                    <span>Have an account? </span> <button class="p-0 border-0 bg-transparent primaryColor login-show">log in</button>
+                    <input type="submit" name="submit" value = "login"/>
+                    <button class = "btn primaryBg text-white">Login</button>
                 </div>
-            </div>
-
-
-
+            </form>
+            <div class="error"><?php//echo $error;?><?php//echo $register_username; echo $register_email; echo $register_password?></div>
+                <div class="mt-3">
+                    <span>have an account? </span> <button class="p-0 border-0 bg-transparent primaryColor signup-show">Sign-up</button>
+                </div>
         </div>
-    </div>
-       
+    </div>       
 </div>
 <!--Main Body End-->
 
@@ -226,20 +195,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-<script> 
-$('.signup-show').click(function(){
-    $('.registration-form').show();
-    $('.login-form').hide();
-
-});
-
-$('.login-show').click(function(){
-    $('.login-form').show();
-    $('.registration-form').hide();
-}); 
-
-</script>
 
 </body>
 </html>
