--- a/create_account.html
+++ b/create_account.html
@@ -57,36 +57,40 @@
 
 <!-- Main body -->
 
-<!--Login page--> <!--Reference: https://www.youtube.com/watch?v=VpBcZBTUs_c&feature=youtu.be -->
+<!--Create Account--> <!--Reference: https://www.youtube.com/watch?v=VpBcZBTUs_c&feature=youtu.be -->
 
 <div class = "container">
     <div class = "row justify-content-center align-items-center inner-row">
         <div class = "col-md-5">
-            <div class = "loginBox p-md-5 p-3">
+            <div class = "form-box registration-form p-md-5 p-3">
                 <div class ="form-title">
-                    <h3>Log-in</h3>
+                    <h3>Create Account</h3>
                 </div>
-
-                <form method ="post" action="login.php">
+                <form method = "post" action="create_account.php">
                     <div class = "form-floating mb-3">
-                        <input type ="text" class="form-control form-control-sm" id="floatingInput" name="username">
+                        <input type ="text" class="form-control form-control-sm" id="floatingInput" name = "register_username">
                         <label for="floatingInput">Username</label>
                     </div>
                     <div class = "form-floating mb-3">
-                        <input type ="password" class="form-control form-control-sm" id="floatingPassword" name="password">
+                        <input type ="email" class="form-control form-control-sm" id="floatingInput" name = "register_email">
+                        <label for="floatingInput">Email</label>
+                    </div>
+                    <div class = "form-floating mb-3">
+                        <input type ="password" class="form-control form-control-sm" id="floatingPassword" name = "register_password">
                         <label for="floatingPassword">Password</label>
                     </div>
                     <div class="mt-3">
-                        <input type="submit" name="submit" value = "login"/>
-                        <button class = "btn primaryBg text-white">Login</button>
+                        <input type="submit" text="submit" value = "submit"/>
+                        <button class = "btn primaryBg text-white">Submit</button>
                     </div>
                 </form>
-                <div class="error"><?php//echo $error;?><?php//echo $username; echo $password;?></div>
-                 
                 <div class="mt-3">
-                   <span>Don't have an account? </span> <button class="p-0 border-0 bg-transparent primaryColor signup-show"><a href = "create_account.html">Sign-up</a></button>
+                    <span>Have an account? </span> <button class="p-0 border-0 bg-transparent primaryColor login-show"><a href = "login_page.html">log in</a></button>
                 </div>
             </div>
+
+
+
         </div>
     </div>
        
@@ -118,19 +122,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-<script> 
-$('.signup-show').click(function(){
-    $('.registration-form').show();
-    $('.login-form').hide();
-
-});
-
-$('.login-show').click(function(){
-    $('.login-form').show();
-    $('.registration-form').hide();
-}); 
-
-</script>
 
 </body>
 </html>
